# web-scraping

./: README.md  pyproject.toml
tests/: test_scraping.py
web_scraping/: scraping.py
